Refactor index.html for semantic structure
Reorganized the HTML structure by adding sections for better semantic layout and improved readability.

--- a/index.html
+++ b/index.html
@@ -20,87 +20,99 @@
       <h3>Full Stack Developer</h3>
       <hr>
     </header>
-    <h2>About Me</h2>
-    <p>I am a aspiring reliable web developer. I specialize in HTML, CSS, Javascript, PHP</p>
+    <section>
+      <h2>About Me</h2>
+      <p>I am a aspiring reliable web developer. I specialize in HTML, CSS, Javascript, PHP</p>
+      <hr>
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML5 & CSS3</li>
+        <li>Javascript</li>
+        <li>PHP</li>
+        <li>MySQL</li>
+        <li>WordPress</li>
+        <li>Git & Github</li>
+      </ul>
+    </section>
     <hr>
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML5 & CSS3</li>
-      <li>Javascript</li>
-      <li>PHP</li>
-      <li>MySQL</li>
-      <li>WordPress</li>
-      <li>Git & Github</li>
-    </ul>
-    <hr>
-    <h2>Experience</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Position</th>
-          <th>Company</th>
-          <th>Duration</th>
-      </thead>
-      </tr>
-      <tbody>
-        <tr>
-          <td>Freelance</td>
-          <td>MilkyNest</td>
-          <td>2025-Present</td>
+    <section>
+      <h2>Experience</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Position</th>
+            <th>Company</th>
+            <th>Duration</th>
+        </thead>
         </tr>
-        <tr>
-          <td>Freelance</td>
-          <td>XpresKart</td>
-          <td>2021-2024</td>
-        </tr>
-        <tr>
-          <td>Freelance</td>
-          <td>ReshamZalika</td>
-          <td>2019-2021</td>
-        </tr>
-      </tbody>
-    </table>
+        <tbody>
+          <tr>
+            <td>Freelance</td>
+            <td>MilkyNest</td>
+            <td>2025-Present</td>
+          </tr>
+          <tr>
+            <td>Freelance</td>
+            <td>XpresKart</td>
+            <td>2021-2024</td>
+          </tr>
+          <tr>
+            <td>Freelance</td>
+            <td>ReshamZalika</td>
+            <td>2019-2021</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
     <hr>
-    <h2>Projects</h2>
-    <h3>Project 1: Milk Subscription & Delivery Management System</h3>
-    <p>Milk Subscription & Delivery Management System that automates customer subscriptions, payments, delivery
-      scheduling, and operations management.</p>
-    <ul>
-      <li>Technologies: PHP, MySQL, Jquery</li>
-      <li>Timeline: Ongoing</li>
-    </ul>
-    <h3>Project 2: E-Commerce Website</h3>
-    <p>Built an E-Commerce Store, Implemented Qr-Code Feature to Verify
-      Authenticity of the Products.</p>
-    <ul>
-      <li>Technologies: PHP, MySQL, Jquery, WordPress</li>
-      <li>Timeline: 3 months</li>
-    </ul>
+    <section>
+      <h2>Projects</h2>
+      <h3>Project 1: Milk Subscription & Delivery Management System</h3>
+      <p>Milk Subscription & Delivery Management System that automates customer subscriptions, payments, delivery
+        scheduling, and operations management.</p>
+      <ul>
+        <li>Technologies: PHP, MySQL, Jquery</li>
+        <li>Timeline: Ongoing</li>
+      </ul>
+      <h3>Project 2: E-Commerce Website</h3>
+      <p>Built an E-Commerce Store, Implemented Qr-Code Feature to Verify
+        Authenticity of the Products.</p>
+      <ul>
+        <li>Technologies: PHP, MySQL, Jquery, WordPress</li>
+        <li>Timeline: 3 months</li>
+      </ul>
+    </section>
     <hr>
-    <h2>Education</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Degree</th>
-          <th>Institution</th>
-          <th>Year</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Bachelor in Commerce</td>
-          <td>SBRR Mahajana First Grade College</td>
-          <td>2013</td>
-        </tr>
-      </tbody>
-    </table>
+    <section>
+      <h2>Education</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Degree</th>
+            <th>Institution</th>
+            <th>Year</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Bachelor in Commerce</td>
+            <td>SBRR Mahajana First Grade College</td>
+            <td>2013</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
     <hr>
-    <h2>Contact</h2>
-    <strong>Email:</strong> ali.ms.01110@gmail.com<br><br>
-    <strong>Phone:</strong> +91-7353873538<br><br>
-    <strong>Location:</strong> Bangalore, INDIA
-    <hr>
-    <p>&copy; 2026 Ali M.S. All rights reserved.</p>
+    <section>
+      <h2>Contact</h2>
+      <strong>Email:</strong> ali.ms.01110@gmail.com<br><br>
+      <strong>Phone:</strong> +91-7353873538<br><br>
+      <strong>Location:</strong> Bangalore, INDIA
+      <hr>
+    </section>
+    <footer>
+      <p>&copy; 2026 Ali M.S. All rights reserved.</p>
+    </footer>
   </body>
 
 </html>
