Refactor contact section and update experience titles
Updated job titles and improved contact section layout.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       td {
         border: 1px solid black;
       }
+
+      .contact h3,
+      p {
+        display: inline-block;
+        margin: 10px 0;
+      }
     </style>
   </head>
 
@@ -47,17 +53,17 @@
         </tr>
         <tbody>
           <tr>
-            <td>Freelance</td>
+            <td>Freelance web developer</td>
             <td>MilkyNest</td>
             <td>2025-Present</td>
           </tr>
           <tr>
-            <td>Freelance</td>
+            <td>Freelance web developer</td>
             <td>XpresKart</td>
             <td>2021-2024</td>
           </tr>
           <tr>
-            <td>Freelance</td>
+            <td>Freelance web developer</td>
             <td>ReshamZalika</td>
             <td>2019-2021</td>
           </tr>
@@ -103,11 +109,20 @@
       </table>
     </section>
     <hr>
-    <section>
+    <section class="contact">
       <h2>Contact</h2>
-      <strong>Email:</strong> ali.ms.01110@gmail.com<br><br>
-      <strong>Phone:</strong> +91-7353873538<br><br>
-      <strong>Location:</strong> Bangalore, INDIA
+      <section>
+        <h3>Email:</h3>
+        <p>ali.ms.01110@gmail.com</p>
+      </section>
+      <section>
+        <h3>Phone:</h3>
+        <p>+91-7353873538</p>
+      </section>
+      <section>
+        <h3>Location:</h3>
+        <p>Bangalore, INDIA</p>
+      </section>
       <hr>
     </section>
     <footer>
